--- a/src/pages/options/index.html
+++ b/src/pages/options/index.html
@@ -5,7 +5,7 @@
     <title>Options</title>
   </head>
 
-  <body>
+  <body style="margin: 0">
     <div id="__root"></div>
     <script type="module" src="./index.tsx"></script>
   </body>
